--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serde = { version = "1.0.104", features = ["derive"] }
 simplelog = "^0.7.4"
 getopts = "0.2"
 crossbeam-utils = "0.7.2"
+toml = "0.5.6"
