--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,11 @@ simplelog = "^0.7.4"
 getopts = "0.2"
 crossbeam-utils = "0.7.2"
 toml = "0.5.6"
+
+[[bin]]
+name = "oviumd"
+path = "src/bin/server.rs"
+
+[[bin]]
+name = "oviumctl"
+path = "src/bin/client.rs"
