--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ serde = { version = "1.0.104", features = ["derive"] }
 simplelog = "^0.7.4"
 getopts = "0.2"
 crossbeam-utils = "0.7.2"
+crossbeam-channel = "0.4.2"
+signal-hook = "0.1.14"
 toml = "0.5.6"
 
 [[bin]]
