--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ log = "0.4"
 ssh2 = "0.6"
 serde_json = "1.0.44"
 serde = { version = "1.0.104", features = ["derive"] }
+bincode = "1.3.3"
 simplelog = "^0.7.4"
 getopts = "0.2"
 crossbeam-utils = "0.7.2"
